Ajustes em filtros de relatorios financeiros e exclusao de pedido